haskell/hmx/test/HMX/files/ill-typed/013_abstration_with_let.lam
(/x. x + (let y = (if x then 1 else 0) in y)) 1
